--- a/Views/AnalysisPage.xaml
+++ b/Views/AnalysisPage.xaml
@@ -7,19 +7,19 @@
 
     <ContentPage.Resources>
         <DataTemplate x:Key="GroupHeaderTemplate">
-            <Label Text="{Binding Key}" FontAttributes="Bold" />
+            <Label Text="{Binding Key.Name}" FontAttributes="Bold" />
         </DataTemplate>
     </ContentPage.Resources>
 
     <ContentPage.Content>
-        <VerticalStackLayout Spacing="0" Margin="5">
+        <VerticalStackLayout Spacing="10" Margin="20">
 
             <CollectionView ItemsSource="{Binding GroupCosts}"
                             IsGrouped="True"
                             GroupHeaderTemplate="{StaticResource GroupHeaderTemplate}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Grid>
+                        <Grid ColumnSpacing="15">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition Width="*" />
