--- a/Views/AnalysisPage.xaml
+++ b/Views/AnalysisPage.xaml
@@ -10,7 +10,7 @@
             <Label Text="{Binding Key.Name}"  FontSize="16" FontAttributes="Bold" />
         </DataTemplate>
         <DataTemplate x:Key="GroupFooterTemplate">
-            <Label Text="{Binding Key.SumValue}"  FontSize="16" FontAttributes="Bold" />
+            <Label Text="{Binding Key.SumValue}"  FontSize="16" FontAttributes="Bold" TextColor="CadetBlue" Margin="1,0,0,15"/>
         </DataTemplate>
     </ContentPage.Resources>
 
@@ -38,11 +38,9 @@
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
-                            <Label Grid.Column="0" Text="{Binding Value}" FontSize="16" />
-                            <Label Grid.Column="1" Text="{Binding Description}" FontSize="16" />
-                            <Label Grid.Column="2" x:Name = "SumTextByCategory" FontSize="16" FontAttributes="Bold" HorizontalTextAlignment="Start" Padding="30, 0"/>
+                            <Label Grid.Column="0" Text="{Binding Value}" FontSize="16" Margin="1,0,0,0" />
+                            <Label Grid.Column="1" Text="{Binding Description}" FontSize="16" Margin="1,0,0,0" />
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
