clean up analysis page

--- a/Views/AnalysisPage.xaml
+++ b/Views/AnalysisPage.xaml
@@ -44,64 +44,12 @@
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
+
+                <CollectionView.Footer >
+                    <Label x:Name = "SumText" FontSize="16" FontAttributes="Bold" HorizontalTextAlignment="Start" Padding="30, 0"/>
+                </CollectionView.Footer>
+
             </CollectionView>
-
-            <!-- Display costs in a list -->
-            <!-- <CollectionView x:Name="costsCollection" -->
-            <!--         ItemsSource="{Binding Costs}" -->
-            <!--         Margin="20"> -->
-                <!-- Header="Date            Value         Category                  Description" -->
-                <!-- SelectionMode="Single" -->
-                    <!-- SelectionChanged="CostsCollection_SelectionChanged"> -->
-
-                <!-- <CollectionView.HeaderTemplate> -->
-                <!--     <DataTemplate> -->
-                <!--         <StackLayout BackgroundColor="White" Orientation="Horizontal" Spacing="20"> -->
-                <!--             <Label Margin="0,0,0,0" -->
-                <!--            Text="Date" -->
-                <!--            FontSize="16" -->
-                <!--            FontAttributes="Bold" /> -->
-                <!--             <Label Margin="10,0,0,0" -->
-                <!--            Text="Value" -->
-                <!--            FontSize="16" -->
-                <!--            FontAttributes="Bold" /> -->
-                <!--             <Label Margin="10,0,0,0" -->
-                <!--            Text="Category" -->
-                <!--            FontSize="16" -->
-                <!--            FontAttributes="Bold" /> -->
-                <!--             <Label Margin="10,0,0,0" -->
-                <!--            Text="Description" -->
-                <!--            FontSize="16" -->
-                <!--            FontAttributes="Bold" /> -->
-                <!--         </StackLayout> -->
-                <!--     </DataTemplate> -->
-                <!-- </CollectionView.HeaderTemplate> -->
-
-                <!-- Designate how the collection of items are laid out -->
-                <!-- <CollectionView.ItemsLayout> -->
-                <!--     <LinearItemsLayout Orientation="Vertical" ItemSpacing="10" /> -->
-                <!-- </CollectionView.ItemsLayout> -->
-                <!-- -->
-                <!-- ~1~ Define the appearance of each item in the list @1@ -->
-                <!-- <CollectionView.ItemTemplate> -->
-                <!--     <DataTemplate> -->
-                <!--         <StackLayout> -->
-                <!--             <HorizontalStackLayout Spacing="35"> -->
-                <!--                 <Label Text="{Binding FormattedDate}" FontSize="16" HorizontalTextAlignment="End"/> -->
-                <!--                 <Label Text="{Binding Value}" FontSize="16" MinimumWidthRequest="25" HorizontalTextAlignment="End"/> -->
-                <!--                 <Label Text="{Binding Category.Name}" FontSize="16" MinimumWidthRequest="70" HorizontalTextAlignment="End"/> -->
-                <!--                 <Label Text="{Binding Description}" FontSize="16" MinimumWidthRequest="0" HorizontalTextAlignment="End"/> -->
-                <!--             </HorizontalStackLayout> -->
-                <!--         </StackLayout> -->
-                <!--     </DataTemplate> -->
-                <!-- </CollectionView.ItemTemplate> -->
-
-                <!-- <CollectionView.Footer > -->
-                <!--     <Label x:Name = "SumText" FontSize="16" FontAttributes="Bold" HorizontalTextAlignment="Start" Padding="30, 0"/> -->
-                <!-- </CollectionView.Footer> -->
-            <!-- </CollectionView> -->
-
         </VerticalStackLayout>
-
     </ContentPage.Content>
 </ContentPage>
