add Total sum to analysis page

--- a/Views/AnalysisPage.xaml
+++ b/Views/AnalysisPage.xaml
@@ -46,7 +46,7 @@
                 </CollectionView.ItemTemplate>
 
                 <CollectionView.Footer >
-                    <Label x:Name = "SumText" FontSize="16" FontAttributes="Bold" HorizontalTextAlignment="Start" Padding="30, 0"/>
+                    <Label x:Name = "SumText" FontSize="16" FontAttributes="Bold" TextColor="CadetBlue" HorizontalTextAlignment="Start" Padding="0, 0"/>
                 </CollectionView.Footer>
 
             </CollectionView>
