--- a/Views/AllCostsPage.xaml
+++ b/Views/AllCostsPage.xaml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:models="clr-namespace:FastCost.Models"
              x:Class="FastCost.Views.AllCostsPage"
              Title="All Costs">
+
+    <ContentPage.BindingContext>
+        <models:AllCosts />
+    </ContentPage.BindingContext>
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="" Clicked="Add_Clicked" IconImageSource="{FontImage Glyph='+', Size=32}" />
