--- a/Views/AnalysisPage.xaml
+++ b/Views/AnalysisPage.xaml
@@ -2,8 +2,13 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:models="clr-namespace:FastCost.Models"
              x:Class="FastCost.Views.AnalysisPage"
              Title="Analysis">
+
+    <ContentPage.BindingContext>
+        <models:AllCosts />
+    </ContentPage.BindingContext>
 
     <ContentPage.Resources>
         <DataTemplate x:Key="GroupHeaderTemplate">
