add OnExportClicked function

--- a/Views/AllCostsPage.xaml
+++ b/Views/AllCostsPage.xaml
@@ -80,7 +80,8 @@
     <Button
         x:Name="ExportBtn"
         Text="Export data to file"
-        SemanticProperties.Hint="Counts the number of times you click"
+        SemanticProperties.Hint="Export data to file"
+        Clicked="OnExportClicked"
         HorizontalOptions="Center" />
 
     </VerticalStackLayout>
