--- a/Views/AllCostsPage.xaml
+++ b/Views/AllCostsPage.xaml
@@ -13,69 +13,71 @@
         <ToolbarItem Text="" Clicked="Add_Clicked" IconImageSource="{FontImage Glyph='+', Size=32}" />
     </ContentPage.ToolbarItems>
 
-    <VerticalStackLayout Spacing="0" Margin="5">    
+    <ScrollView>
+        <VerticalStackLayout Spacing="0" Margin="5">    
 
-    <DatePicker x:Name="allCostsDatePicker" 
-                Date="{Binding SelectedDate}"
-                Format="MM/yyyy"
-                FontSize="20"
-                HorizontalOptions="Center"
-                DateSelected="MyDatePicker_DateSelected"/>
+        <DatePicker x:Name="allCostsDatePicker" 
+                    Date="{Binding SelectedDate}"
+                    Format="MM/yyyy"
+                    FontSize="20"
+                    HorizontalOptions="Center"
+                    DateSelected="MyDatePicker_DateSelected"/>
 
-        <!-- Display costs in a list -->
-    <CollectionView x:Name="costsCollection"
-                    ItemsSource="{Binding Costs}"
-                    Header="Date            Value         Category                  Description"
-                    Margin="20"
-                    SelectionMode="Single"
-                    SelectionChanged="CostsCollection_SelectionChanged">
+            <!-- Display costs in a list -->
+        <CollectionView x:Name="costsCollection"
+                        ItemsSource="{Binding Costs}"
+                        Header="Date            Value         Category                  Description"
+                        Margin="20"
+                        SelectionMode="Single"
+                        SelectionChanged="CostsCollection_SelectionChanged">
 
-        <CollectionView.HeaderTemplate>
-            <DataTemplate>
-                <StackLayout Orientation="Horizontal" Spacing="20">
-                    <Label Margin="0,0,0,0"
-                           Text="Date"
-                           FontSize="16"
-                           FontAttributes="Bold" />                    
-                    <Label Margin="10,0,0,0"
-                           Text="Value"
-                           FontSize="16"
-                           FontAttributes="Bold" />                    
-                    <Label Margin="10,0,0,0"
-                           Text="Category"
-                           FontSize="16"
-                           FontAttributes="Bold" />                    
-                    <Label Margin="10,0,0,0"
-                           Text="Description"
-                           FontSize="16"
-                           FontAttributes="Bold" />
-                </StackLayout>
-            </DataTemplate>
-        </CollectionView.HeaderTemplate>
+            <CollectionView.HeaderTemplate>
+                <DataTemplate>
+                    <StackLayout Orientation="Horizontal" Spacing="20">
+                        <Label Margin="0,0,0,0"
+                               Text="Date"
+                               FontSize="16"
+                               FontAttributes="Bold" />                    
+                        <Label Margin="10,0,0,0"
+                               Text="Value"
+                               FontSize="16"
+                               FontAttributes="Bold" />                    
+                        <Label Margin="10,0,0,0"
+                               Text="Category"
+                               FontSize="16"
+                               FontAttributes="Bold" />                    
+                        <Label Margin="10,0,0,0"
+                               Text="Description"
+                               FontSize="16"
+                               FontAttributes="Bold" />
+                    </StackLayout>
+                </DataTemplate>
+            </CollectionView.HeaderTemplate>
 
-        <!-- Designate how the collection of items are laid out -->
-        <CollectionView.ItemsLayout>
-            <LinearItemsLayout Orientation="Vertical" ItemSpacing="10" />
-        </CollectionView.ItemsLayout>
+            <!-- Designate how the collection of items are laid out -->
+            <CollectionView.ItemsLayout>
+                <LinearItemsLayout Orientation="Vertical" ItemSpacing="10" />
+            </CollectionView.ItemsLayout>
 
-        <!-- Define the appearance of each item in the list -->
-        <CollectionView.ItemTemplate>
-            <DataTemplate>
-                <StackLayout>
-                    <HorizontalStackLayout Spacing="35">
-                        <Label Text="{Binding FormattedDate}" FontSize="16" HorizontalTextAlignment="End"/>
-                        <Label Text="{Binding Value}" FontSize="16" MinimumWidthRequest="25" HorizontalTextAlignment="End"/>
-                        <Label Text="{Binding Category.Name}" FontSize="16" MinimumWidthRequest="70" HorizontalTextAlignment="End"/>
-                        <Label Text="{Binding Description}" FontSize="16" MinimumWidthRequest="0" HorizontalTextAlignment="End"/>
-                    </HorizontalStackLayout>
-                </StackLayout>
-            </DataTemplate>
-        </CollectionView.ItemTemplate>
+            <!-- Define the appearance of each item in the list -->
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <StackLayout>
+                        <HorizontalStackLayout Spacing="35">
+                            <Label Text="{Binding FormattedDate}" FontSize="16" HorizontalTextAlignment="End"/>
+                            <Label Text="{Binding Value}" FontSize="16" MinimumWidthRequest="25" HorizontalTextAlignment="End"/>
+                            <Label Text="{Binding Category.Name}" FontSize="16" MinimumWidthRequest="70" HorizontalTextAlignment="End"/>
+                            <Label Text="{Binding Description}" FontSize="16" MinimumWidthRequest="0" HorizontalTextAlignment="End"/>
+                        </HorizontalStackLayout>
+                    </StackLayout>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
 
-        <CollectionView.Footer>
-            <Label x:Name = "SumText" FontSize="16" FontAttributes="Bold" TextColor="CadetBlue" HorizontalTextAlignment="Start" Padding="0, 0" />
-        </CollectionView.Footer>
-    </CollectionView>
+            <CollectionView.Footer>
+                <Label x:Name = "SumText" FontSize="16" FontAttributes="Bold" TextColor="CadetBlue" HorizontalTextAlignment="Start" Padding="0, 0" />
+            </CollectionView.Footer>
+        </CollectionView>
 
-    </VerticalStackLayout>
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
