add numberic keyboard to CostValueEditor in CostPage

--- a/Views/CostPage.xaml
+++ b/Views/CostPage.xaml
@@ -42,7 +42,8 @@
                 Text="{Binding Value}"
                 FontSize="26" 
                 FontAttributes="Bold"
-                HorizontalTextAlignment="Center" />
+                HorizontalTextAlignment="Center"
+                Keyboard="Numeric" />
 
         <Editor x:Name="DescriptionEditor"
                 Placeholder="enter description"
