change DateLabel to costDatePicker - Switch Date from label to editor #34

--- a/Views/CostPage.xaml
+++ b/Views/CostPage.xaml
@@ -52,17 +52,24 @@
                 FontAttributes="Bold"
                 HorizontalTextAlignment="Center" />
 
-        <Label x:Name="DateLabel"
+        <!--<Label x:Name="DateLabel"
                 Text="{Binding Date, StringFormat='{0:dd/MM/yyyy}'}"
                 FontSize="24"
                 HorizontalTextAlignment="Center" />
 
-        <!-- <Editor x:Name="DateEditor" -->
-        <!--         Placeholder="enter date" -->
-        <!--         Text="{Binding Date, StringFormat='{0:dd/MM/yyyy}'}" -->
-        <!--         FontSize="24" -->
-        <!--         FontAttributes="Bold" -->
-        <!--         HorizontalTextAlignment="Center" /> -->
+         <Editor x:Name="DateEditor" 
+                 Placeholder="enter date" 
+                 Text="{Binding Date, StringFormat='{0:dd/MM/yyyy}'}" 
+                 FontSize="24" 
+                 FontAttributes="Bold" 
+                 HorizontalTextAlignment="Center" />-->
+
+        <DatePicker x:Name="costDatePicker" 
+                    Date="{Binding Date}"
+                    Format="dd/MM/yyyy"
+                    FontSize="24"
+                    HorizontalOptions="Center"
+                    />
 
         <Grid ColumnDefinitions="*,*" ColumnSpacing="10" Margin="5">
             <Button Grid.Column="0"
