change StaticResource to DynamicResource

--- a/Views/AnalysisPage.xaml
+++ b/Views/AnalysisPage.xaml
@@ -33,8 +33,8 @@
                 <CollectionView x:Name="CollectionViewGroup"
                             ItemsSource="{Binding GroupCosts}"
                             IsGrouped="True"
-                            GroupHeaderTemplate="{StaticResource GroupHeaderTemplate}"
-                            GroupFooterTemplate="{StaticResource GroupFooterTemplate}">
+                            GroupHeaderTemplate="{DynamicResource GroupHeaderTemplate}"
+                            GroupFooterTemplate="{DynamicResource GroupFooterTemplate}">
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
                             <Grid ColumnSpacing="15">
