--- a/Views/AnalysisPage.xaml
+++ b/Views/AnalysisPage.xaml
@@ -49,7 +49,7 @@
                     </CollectionView.ItemTemplate>
 
                     <CollectionView.Footer >
-                        <Label x:Name = "SumText" FontSize="16" FontAttributes="Bold" TextColor="CadetBlue" HorizontalTextAlignment="Start" Padding="0, 0"/>
+                        <Label x:Name = "SumText" Text="{Binding Sum}" FontSize="16" FontAttributes="Bold" TextColor="CadetBlue" HorizontalTextAlignment="Start" Padding="0, 0"/>
                     </CollectionView.Footer>
 
                 </CollectionView>
