update total sum text and format

--- a/Views/AllCostsPage.xaml
+++ b/Views/AllCostsPage.xaml
@@ -74,7 +74,7 @@
             </CollectionView.ItemTemplate>
 
             <CollectionView.Footer>
-                <Label x:Name = "SumText" Text="{Binding Sum}" FontSize="16" FontAttributes="Bold" TextColor="CadetBlue" HorizontalTextAlignment="Start" Padding="0, 0" />
+                    <Label x:Name = "SumText" Text="{Binding Sum, StringFormat='Total sum: {0:F2}'}" FontSize="16" FontAttributes="Bold" TextColor="CadetBlue" HorizontalTextAlignment="Start" Padding="0, 0" />
             </CollectionView.Footer>
         </CollectionView>
 
